# rfp-insight-engine

./: .gitignore  README.md  start_backend.ps1
backend/: Makefile  pyproject.toml
backend/config/: prompts.yaml
backend/entrypoint/: api.py  ingest.py  query.py
backend/src/pipelines/: embedding_pipeline.py  generation_pipeline.py  retrieval_pipeline.py
backend/src/schema/: compliance.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ComplianceTable.tsx  DeadlinesSidebar.tsx  UploadZone.tsx
